--- a/docker-framework/framework-test/Dockerfile
+++ b/docker-framework/framework-test/Dockerfile
@@ -1,6 +1,6 @@
 FROM docker.artifactory/docker-framework:latest
 
-MAINTAINER Stanley Fong stanleyf@jfrog.com
+MAINTAINER Jainish Shah jainishs@jfrog.com
 
 ADD war/*.war /home/exec/tomcat/webapps/swampup.war
 
