--- a/docker-app-chart/Chart.yaml
+++ b/docker-app-chart/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
 description: A Helm chart for Kubernetes
-name: docker-app
+name: docker-app-chart
 version: 0.1.1
 keywords:
   - http
