--- a/docker-app-chart/Jenkinsfile
+++ b/docker-app-chart/Jenkinsfile
@@ -2,9 +2,7 @@ node {
 
     stage('Clone repository') {
         /* Let's make sure we have the repository cloned to our workspace */
-        dir ('docker-app') {
-        git url: 'https://github.com/jainishshah17/docker-app.git'
-        }
+        git url: 'https://github.com/jfrogtraining/kubernetes_example.git', branch: 'master'
     }
 
     stage('Install helm & JFrog CLI') {
@@ -21,12 +19,11 @@ node {
     stage('Build Chart & push it to Artifactory repo') {
         /* Configure helm client to point to k8s cluster */
          sh "./helm init"
-         sh "sed -i 's/latest/${IMAGE_TAG}/g' ./docker-app/values.yaml"
-         sh "./helm package ./docker-app/"
-         sh "./jfrog rt u '*.tgz' helm --build-name=${env.JOB_NAME} --build-number=${env.BUILD_NUMBER}"
+         sh "sed -i 's/latest/${IMAGE_TAG}/g' docker-app-chart/values.yaml"
+         sh "./helm package ./docker-app-chart/"
+         sh "./jfrog rt u '*.tgz' ${REPO} --build-name=${env.JOB_NAME} --build-number=${env.BUILD_NUMBER}"
          sh "./jfrog rt bce ${env.JOB_NAME} ${env.BUILD_NUMBER}"
          sh "./jfrog rt dl docker-prod-local/docker-app/${IMAGE_TAG}/manifest.json --build-name=${env.JOB_NAME} --build-number=${env.BUILD_NUMBER} "
-         echo "test"
          sh "./jfrog rt bp ${env.JOB_NAME} ${env.BUILD_NUMBER}"
     }
 
