--- a/docker-framework/framework-test/Dockerfile
+++ b/docker-framework/framework-test/Dockerfile
@@ -2,6 +2,7 @@ FROM docker.artifactory/docker-framework:latest
 
 MAINTAINER Jainish Shah jainishs@jfrog.com
 
-ADD war/*.war /home/exec/tomcat/webapps/swampup.war
+RUN rm -rf /home/exec/tomcat/webapps/*
 
+ADD war/*.war /home/exec/tomcat/webapps/ROOT.war
 CMD /bin/bash -c cd /home/exec; /home/exec/tomcat/bin/catalina.sh run
