--- a/docker-app-chart/Chart.yaml
+++ b/docker-app-chart/Chart.yaml
@@ -13,3 +13,4 @@ sources:
 maintainers:
   - name: jainishshah17
     email: jainishs@jfrog.com
+icon: https://raw.githubusercontent.com/JFrogDev/artifactory-dcos/master/images/jfrog_med.png
