--- a/docker-framework/Jenkinsfile
+++ b/docker-framework/Jenkinsfile
@@ -5,7 +5,6 @@ node {
     git url: 'https://github.com/jfrogtraining/kubernetes_example.git', branch : 'master'
     def rtServer = Artifactory.server SERVER_ID
     def rtDocker = Artifactory.docker server: rtServer
-    def tagDockerApp
     def buildInfo = Artifactory.newBuildInfo()
     def tagName
     buildInfo.env.capture = true
@@ -47,10 +46,11 @@ node {
     //Build docker image named "docker-framework" with Java 8 and Tomcat
     stage('Build') {
         dir ('docker-framework') {
+                sh "sed -i 's/docker.artifactory/${ARTDOCKER_REGISTRY}/' Dockerfile"
                 tagName = "${ARTDOCKER_REGISTRY}/docker-framework:${env.BUILD_NUMBER}"
                 println "Docker Framework Build"
                 docker.build(tagName)
-                println "Docker push" + tagName + " : " + REPO
+                println "Docker pushing -->" + tagName + " To " + REPO
                 buildInfo = rtDocker.push(tagName, REPO, buildInfo)
                 println "Docker Buildinfo"
                 rtServer.publishBuildInfo buildInfo
@@ -74,7 +74,6 @@ node {
 
             rtServer.download(gradleWarDownload)
             updateDockerFile()
-            app = docker.build("docker-framework-test:${env.BUILD_NUMBER}")
             def tagDockerFramework = "${ARTDOCKER_REGISTRY}/docker-framework-test:${env.BUILD_NUMBER}"
             docker.build(tagDockerFramework)
             if (testFramework(tagDockerFramework)) {
@@ -127,6 +126,7 @@ node {
 
 def updateDockerFile () {
     def BUILD_NUMBER = env.BUILD_NUMBER
+    sh "sed -i 's/docker.artifactory/${ARTDOCKER_REGISTRY}/' Dockerfile"
     sh 'sed -i "s/docker-framework:latest/docker-framework:$BUILD_NUMBER/" Dockerfile'
 }
 
