Fixed jenkins files

--- a/docker-app/Jenkinsfile
+++ b/docker-app/Jenkinsfile
@@ -35,7 +35,7 @@ node {
     //Build docker image named docker-app
     stage ('Build & Deploy') {
         dir ('docker-app') {
-
+            sh "sed -i 's/docker.artifactory/${ARTDOCKER_REGISTRY}/' Dockerfile"
             tagDockerApp = "${ARTDOCKER_REGISTRY}/docker-app:${env.BUILD_NUMBER}"
             println "Docker App Build"
             docker.build(tagDockerApp)
